# 2PZ

./: .gitignore  2PZ.sln  Doxyfile
2PZ/: 2PZ.cpp  2PZ.vcxproj  2PZ.vcxproj.filters  CMakeLists.txt  calculator.cpp  calculator.h  test_calculator.cpp
2PZTEST/: 2PZTEST.vcxproj  test.cpp
html/: annotated.html  calculator_8cpp_source.html  calculator_8h_source.html  classes.html  classstd_1_1tr1_1_1gtest__internal_1_1_get.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_010_01_4-members.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_010_01_4.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_011_01_4-members.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_011_01_4.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_012_01_4-members.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_012_01_4.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_013_01_4-members.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_013_01_4.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_014_01_4-members.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_014_01_4.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_015_01_4-members.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_015_01_4.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_016_01_4-members.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_016_01_4.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_017_01_4-members.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_017_01_4.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_018_01_4-members.html  classstd_1_1tr1_1_1gtest__internal_1_1_get_3_018_01_4.html  (+414 more)
(+262 files in other folders)
